--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,36 @@
+<div class="jumbotron">
+	<div class="container">
+		<h1>Facebook on Rails</h1>
+		<p> Welcome to the app </p>
+		
+		<div class="progress">
+			<div class="progress-bar" style="width:40%"></div>
+			<div class="progress-bar progress-bar-warning" style="width:10%"></div>
+			<div class="progress-bar progress-bar-danger" style="width:10%"></div>
+			<div class="progress-bar progress-bar-success" style="width:10%"></div>
+			<div class="progress-bar progress-bar-info" style="width:30%"></div>
+		</div>
+	</div>
+</div>
 <div class="container">
-	<h2>Hello world</h2>
-	welcome to facebook on rails
+	<div class="row">
+		<div class="col-md-12">
+			<h3>How it works</h3>
+			<hr>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<h2>Connect with facebook</h2>
+			<p>signup or login to this app with your facebook account</p>
+		</div>
+		<div class="col-md-4">
+			<h2>Create Fun posts</h2>
+			<p>Start posting cool stuff</p>
+		</div>
+		<div class="col-md-4">
+			<h2>Share them</h2>
+			<p>Share them with your friends on facebook</p>
+		</div>
+	</div>
 </div>
