--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,7 +4,11 @@
   <div class="form-inputs">
 	  <%= f.input :title, input_html: {class: 'form-control'}, label: false, placeholder: "Titulo" %><br>
 	  <%= f.input :content, input_html: {class: 'form-control'}, label: false, placeholder: "Comentario" %><br>
+	  
   </div>
+	<%if current_user.verify_permissions == 1%>
+	<%= f.input :post_on_facebook, class: "pull-right" %><br>
+	<%end%>
 
   <div class="form-actions">
     <%= f.button :submit, class:"btn btn-lg btn-primary btn-block" %>
