--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,24 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-4">
-			<h1>
-				<%= @user.name %>
-			</h1>
+			<div class="media">
+				<%= image_tag @user.get_profile_picture, class: "pull-left" %>
+				<div class="media-body">
+					<h4 class="media-heading">
+						<%= @user.name %>
+					</h4>
+					from <%= @user.get_location %>
+				</div>
+			</div>
+			<div class="books">
+				<% @user.get_books.each do |book| %>
+				<p>
+					<%= book["name"] %>
+				</p>
+				<%end%>
+			</div>
 		</div>
+		<div></div>
 		<div class="col-lg-8">
 			<% @user.posts.order("created_at DESC").each do |post| %>
 			<div class="post well">
